Bug 1297761 - Ignore error returned by SetForceCharacterSet() to maintain status quo. r=mkmelin